# arm-embedded-programming

./: .gitignore  CMakeLists.txt
binary_counter/: CMakeLists.txt
binary_counter/inc/: stm32f1xx_hal_conf.h  stm32f1xx_it.h
binary_counter/src/: main.c  stm32f1xx_hal_msp.c
blink/: CMakeLists.txt
blink/inc/: main.h
blink/src/: main.c
cmake/: arm-none-eabi-gcc.cmake
display7_seg/: CMakeLists.txt
display7_seg/src/: main.c
keyboard_counter/: CMakeLists.txt
keyboard_counter/src/: main.c
push_button/: CMakeLists.txt
push_button/src/: main.c  stm32f1xx_it.c
utils/: STM32F103XB_FLASH.ld  startup_stm32f103xb.s
